Refactor application properties and update repository methods for checklist validation